Perkin-UAT/force-app/main/default/objects/Junction_Technical_Products__c/Junction_Technical_Products__c.object-meta.xml
<CustomObject>
    <description>Junction Technical Products (Source: S-692579)</description>
    <label>Junction Technical Products</label>
    <nameField>
        <displayFormat>JunctionTechProduct-{0000}</displayFormat>
        <label>Junction technical products Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Junction Technical Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>