Perkin-UAT/force-app/main/default/objects/Junction_Technical_Products__c/fields/fxFamily__c.field-meta.xml
<CustomField>
    <fullName>fxFamily__c</fullName>
    <description>Product Family (Source: S-692579)</description>
    <formula>TEXT(Product__r.Family)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fxFamily</label>
    <type>Text</type>
</CustomField>