Perkin-UAT/force-app/main/default/objects/Junction_Technical_Products__c/fields/fxProduct_Name__c.field-meta.xml
<CustomField>
    <fullName>fxProduct_Name__c</fullName>
    <description>Product Name (Source: S-692579)</description>
    <formula>Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fxProduct Name</label>
    <type>Text</type>
</CustomField>