Perkin-UAT/force-app/main/default/objects/Junction_Technical_Products__c/fields/Technical__c.field-meta.xml
<CustomField>
    <fullName>Technical__c</fullName>
    <description>Technical Master-Detail (Source: S-692579)</description>
    <label>Technical</label>
    <referenceTo>Technical__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Junction_technical_products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>